Source/WebCore/page/ResizeObserver.h
@@ -27,12 +27,18 @@
 
 #if ENABLE(RESIZE_OBSERVER)
 
-#include "ActiveDOMObject.h"
 #include "GCReachableRef.h"
 #include "ResizeObservation.h"
 #include "ResizeObserverCallback.h"
+#include <wtf/Lock.h>
 #include <wtf/RefCounted.h>
 #include <wtf/WeakPtr.h>
+
+namespace JSC {
+
+class AbstractSlotVisitor;
+
+}
 
 namespace WebCore {
 
@@ -44,8 +50,7 @@ struct ResizeObserverData {
     Vector<WeakPtr<ResizeObserver>> observers;
 };
 
-class ResizeObserver : public RefCounted<ResizeObserver>, public ActiveDOMObject, public CanMakeWeakPtr<ResizeObserver> {
-    WTF_MAKE_FAST_ALLOCATED;
+class ResizeObserver : public RefCounted<ResizeObserver>, public CanMakeWeakPtr<ResizeObserver> {
 public:
     static Ref<ResizeObserver> create(Document&, Ref<ResizeObserverCallback>&&);
     ~ResizeObserver();
@@ -65,14 +70,10 @@ public:
     void setHasSkippedObservations(bool skipped) { m_hasSkippedObservations = skipped; }
 
     ResizeObserverCallback* callbackConcurrently() { return m_callback.get(); }
+    bool isReachableFromOpaqueRoots(JSC::AbstractSlotVisitor&) const;
 
 private:
     ResizeObserver(Document&, Ref<ResizeObserverCallback>&&);
-
-    // ActiveDOMObject.
-    bool virtualHasPendingActivity() const override;
-    const char* activeDOMObjectName() const override;
-    void stop() override;
 
     bool removeTarget(Element&);
     void removeAllTargets();
@@ -83,7 +84,7 @@ private:
     Vector<Ref<ResizeObservation>> m_observations;
 
     Vector<Ref<ResizeObservation>> m_activeObservations;
-    Vector<GCReachableRef<Element>> m_pendingTargets;
+    Vector<GCReachableRef<Element>> m_activeObservationTargets;
     bool m_hasSkippedObservations { false };
 };
 
